--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
 
         <section class="menu">
-            <h2>Plan interactif</h2>
+            <h2>Plan</h2>
             <ul>
                 <li><a href="biographie.html">I. Une figure exceptionnelle</a></li>
                 <li><a href="mandats.html">II. Une présidence historique</a></li>
