--- a/icones.html
+++ b/icones.html
@@ -22,7 +22,7 @@
                     <img src="obama_2004_speech.jpg" alt="Obama 2004 Speech">
                     <figcaption>Discours de Barack Obama à la Convention démocrate en 2004, un tournant pour sa carrière politique.</figcaption>
                 </figure>
-                <h3>Comment il voulait être perçu vs. comment il est perçu aujourd'hui</h3>
+                <h3>De l'image souhaitée à la perception réelle</h3>
                 <p>Obama a toujours voulu incarner un président rassembleur, au-delà des divisions, ancré dans les valeurs d'intégrité et d'élévation. Pour beaucoup, il est devenu un symbole presque intouchable, évoqué avec admiration dans la culture populaire et les médias. Pourtant, avec le recul, certains soulignent les limites concrètes de son bilan. Il est accusé par certains progressistes d'avoir été trop modéré, trop conciliant face aux injustices systémiques et à Wall Street. Cette dualité entre l'icône qu'il représente et la réalité de son action politique rend son héritage plus complexe et nuancé qu'il n'y paraît à première vue.</p>
                 <figure>
                     <img src="obama_nobel_peace.jpg" alt="Obama Nobel Peace Prize">
